# o1-ai-assistant

./: .gitignore  Dockerfile  README.md  design.md  pyproject.toml
data/: O-1A Evidentiary Criterion - O-1A Evidentiary Criterion.csv
src/: config.py  main.py  openai_client.py  playground.ipynb  test.ipynb  utilities.py
